--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,9 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
-  username: ENV["DB_USERNAME"]
-  password: ENV["DB_PASSWORD"]
-  port:     ENV["DB_PORT"]
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  port:     <%= ENV['DB_PORT'] %>
 
 development:
   <<: *default
